# model-registry

./: .dockerignore  .gitattributes  .gitignore  .gitleaks.toml  .openapi-generator-ignore  .pre-commit-config.yaml  .readthedocs.yaml  .syft.yaml  ADOPTERS.md  AGENTS.md  CONTRIBUTING.md  Dockerfile  Dockerfile.cross  Dockerfile.csi  Dockerfile.odh  Dockerfile.testops  Makefile  OWNERS  README.md  RELEASE.md  ROADMAP.md  SECURITY.md  docker-compose-dev.yaml  docker-compose-local.yaml  docker-compose-mysql.yaml  docker-compose-postgres.yaml  docker-compose.yaml  go.mod  go.sum  go.work  go.work.sum  gqlgen.yml  main.go  package-lock.json  tilt-controller.dockerfile  tilt-ui.dockerfile  tilt.dockerfile  tools.go
catalog/clients/python/: .gitignore  Makefile  README.md  noxfile.py  odh_rules_catalog.mk  pyproject.toml  schemathesis.toml
clients/mlflow-model-registry-store/: .gitignore  README.md  README_DEMO.md  check_server.py  demo-modelregistry.sh  demo-native.sh  demo.py  demo_mlflow_registry.py  main.py  pyproject.toml
clients/mlflow-model-registry-store/tests/: __init__.py  test_integration.py  test_store.py
clients/model-registry-mlflow/: CONTRIBUTING.md  Makefile  README.md  REFACTORING_SUMMARY.md  pyproject.toml
clients/model-registry-mlflow/model_registry_mlflow/: utils.py
clients/model-registry-mlflow/tests/: .gitignore  __init__.py  conftest.py  test_api_client.py  test_async_logging.py  test_auth.py  test_converters.py  test_e2e.py  test_e2e_local.py  test_operations_experiment.py  test_operations_metric.py  test_operations_model.py  test_operations_run.py  test_operations_search.py  test_store.py  test_utils.py
clients/modelregistry_plugin/: .gitignore  CONTRIBUTING.md  Makefile  README.md  REFACTORING_SUMMARY.md  pyproject.toml  requirements-test.txt  requirements.txt
clients/modelregistry_plugin/docs/: e2e_testing.md
clients/modelregistry_plugin/modelregistry_plugin/: __init__.py  api_client.py  auth.py  converters.py  store.py  store_new.py  utils.py
clients/modelregistry_plugin/scripts/: run_e2e_tests.sh  test_e2e_setup.py
clients/modelregistry_plugin/tests/: __init__.py  conftest.py  e2e_config.env.example  test_api_client.py  test_async_logging.py  test_auth.py  test_converters.py  test_e2e.py  test_e2e_local.py  test_operations_experiment.py  test_operations_metric.py  test_operations_model.py  test_operations_run.py  test_operations_search.py  test_store.py  test_utils.py
clients/python/: .gitignore  Makefile  README.md  noxfile.py  odh_rules.mk  pyproject.toml  schemathesis.toml
clients/python/docs/: conf.py  index.md  reference.md
clients/python/patches/: asyncio-only.patch  fix-validators.patch
clients/python/scripts/: check_oci_dir_structure.py
clients/python/src/: .openapi-generator-ignore
clients/python/templates/: configuration.mustache
clients/python/tests/: OWNERS  REST_bindings_test.py  __init__.py  basic_test.py  conftest.py  constants.py  regression_test.py  test_api.py  test_api_stateful.py  test_client.py  test_connection.py  test_core.py  test_experiments.py  test_signing.py  test_token.py  test_utils.py
cmd/: config.go  (+5 more)
jobs/async-upload/: .dockerignore  Dockerfile  Makefile  README.md  odh_rules.mk  pyproject.toml  requirements-build.txt  requirements.txt
jobs/async-upload/job/: config.py  download.py  entrypoint.py  healthcheck.py  models.py  mr_client.py  upload.py
jobs/async-upload/samples/: create_model_example.yaml  create_version_example.yaml  sample_job_s3_to_oci.yaml  sample_job_s3_to_oci_command_params.yaml  sample_job_s3_to_oci_kitchen_sink.yaml  sample_job_s3_to_oci_mounted_secrets.yaml  setup-and-apply-job.sh
jobs/async-upload/tests/: __init__.py  conftest.py  test_config.py  test_download.py  test_models.py  test_mr_client.py  test_upload.py
test/python-kiota/: .gitignore  Makefile  README.md  kiota-gen.py  kiota-version.csproj  pyproject.toml
test/python-kiota/tests/: basic_test.py
test/python-oag/: README.md  pyproject.toml
test/python-oag/.openapi-generator/: FILES
test/python-oag/docs/: Artifact.md  ArtifactList.md  ArtifactState.md  BaseArtifact.md  BaseArtifactCreate.md  BaseArtifactUpdate.md  BaseExecution.md  BaseExecutionCreate.md  BaseExecutionUpdate.md  BaseResource.md  BaseResourceCreate.md  BaseResourceList.md  BaseResourceUpdate.md  DocArtifact.md  Error.md  ExecutionState.md  InferenceService.md  InferenceServiceCreate.md  InferenceServiceList.md  InferenceServiceState.md  InferenceServiceUpdate.md  MetadataBoolValue.md  MetadataDoubleValue.md  MetadataIntValue.md  MetadataProtoValue.md  MetadataStringValue.md  MetadataStructValue.md  MetadataValue.md  ModelArtifact.md  ModelArtifactCreate.md  ModelArtifactList.md  ModelArtifactUpdate.md  ModelRegistryServiceApi.md  ModelVersion.md  ModelVersionCreate.md  ModelVersionList.md  ModelVersionState.md  ModelVersionUpdate.md  OrderByField.md  RegisteredModel.md  (+13 more)
test/python-oag/mr_openapi/: api_client.py  configuration.py  exceptions.py  rest.py
test/python-oag/test/: basic_test.py  test_artifact.py  test_artifact_list.py  test_artifact_state.py  test_base_artifact.py  test_base_artifact_create.py  test_base_artifact_update.py  test_base_execution.py  test_base_execution_create.py  test_base_execution_update.py  test_base_resource.py  test_base_resource_create.py  test_base_resource_list.py  test_base_resource_update.py  test_doc_artifact.py  test_error.py  test_execution_state.py  test_inference_service.py  test_inference_service_create.py  test_inference_service_list.py  test_inference_service_state.py  test_inference_service_update.py  test_metadata_bool_value.py  test_metadata_double_value.py  test_metadata_int_value.py  test_metadata_proto_value.py  test_metadata_string_value.py  test_metadata_struct_value.py  test_metadata_value.py  test_model_artifact.py  test_model_artifact_create.py  test_model_artifact_list.py  test_model_artifact_update.py  test_model_registry_service_api.py  test_model_version.py  test_model_version_create.py  test_model_version_list.py  test_model_version_state.py  test_model_version_update.py  (+15 more)
(+3075 files in other folders)
