[project]
name = "modelregistry_plugin"
version = "0.1.0"
description = "Kubeflow Model Registry MLFlow Integration Plugin"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "mlflow>=2.0.0",
    "requests>=2.25.0",
]

[project.entry-points."mlflow.tracking_store"]
modelregistry = "modelregistry_plugin.store:ModelRegistryStore"
"modelregistry+http" = "modelregistry_plugin.store:ModelRegistryStore"
"modelregistry+https" = "modelregistry_plugin.store:ModelRegistryStore"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "psutil>=7.0.0",
    "pytest>=8.4.0",
    "pytest-cov>=6.2.1",
    "pytest-dotenv>=0.5.2",
    "ruff>=0.12.0",
    "testcontainers>=3.7.0",
]

[tool.ruff]
target-version = "py39"
respect-gitignore = true

[tool.ruff.lint]
select = [
    "F", # pyflakes
    "W", # warnings
    "E", # errors
    "C90", # mccabe
    "B",   # bugbear
    "S",   # flake8-bandit
    "C4",  # flake8-comprehensions
    "D",   # pydocstyle
    "EM",  # flake8-errmsg
    "I",   # isort
    "PT",  # pytest
    "Q",   # flake8-quotes
    "RET", # flake8-return
    "SIM", # flake8-simplify
    "UP",  # pyupgrade
    
    # Type checking rules
    "TCH", # flake8-type-checking
    "TID", # flake8-tidy-imports
    "ARG", # flake8-unused-arguments
    "PIE", # flake8-pie
    "T20", # flake8-print
    "PYI", # flake8-pyi
]
ignore = [
    "D105", # missing docstring in magic method
    "E501", # line too long
    "S101", # use of assert detected
    "TCH001", # allow typing imports in runtime code
    "TCH002", # allow typing imports in runtime code
    "TCH003", # allow typing imports in runtime code
]
mccabe.max-complexity = 8
per-file-ignores = { "tests/**/*.py" = [
    "D", # missing docstring in public module
] }

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-type-checking]
# Allow type-checking imports in runtime code
runtime-evaluated-base-classes = ["pydantic.BaseModel"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"
