[project]
name = "modelregistry_plugin"
version = "0.1.0"
description = "Kubeflow Model Registry MLFlow Integration Plugin"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "mlflow>=2.0.0",
    "requests>=2.25.0",
]

[project.entry-points."mlflow.tracking_store"]
modelregistry = "modelregistry_plugin.tracking_store:ModelRegistryTrackingStore"
"modelregistry+http" = "modelregistry_plugin.tracking_store:ModelRegistryTrackingStore"
"modelregistry+https" = "modelregistry_plugin.tracking_store:ModelRegistryTrackingStore"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "psutil>=7.0.0",
    "pytest>=8.4.0",
    "pytest-cov>=6.2.1",
    "pytest-dotenv>=0.5.2",
    "ruff>=0.12.0",
    "testcontainers>=3.7.0",
]
