[tool.poetry]
name = "async-upload"
version = "0.0.1"
description = "Model Registry Job to upload a Model from a source to a destination"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "job"}]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
configargparse = ">=1.7.1,<2.0.0"
model-registry = { version = ">=0.2.19,<0.4.0", extras = ["boto3", "olot"] }
pydantic = ">=2.0.0,<3.0.0"
huggingface-hub = "^1.4.0"
requests = "^2.32.5"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.3.5,<10.0.0"
pytest-asyncio = "^1.3.0"
aiohttp = "^3.13.3"

[tool.poetry.group.integration.dependencies]
kubernetes = "^33.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
markers = [
    "e2e: marks tests as end-to-end tests",
    "integration: marks tests as integration tests"
]


[tool.ruff]
line-length = 119
